[package]
name = "mah"
version = "1.12.1"
description = "A Tauri App"
authors = [ "ffalt" ]
edition = "2021"

[lib]
name = "tauri_mah_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2.4.1"
features = [ ]

[dependencies]
tauri-plugin-opener = "2.5.2"
serde_json = "1"

  [dependencies.tauri]
  version = "2.8.5"
  features = [ ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
